# CircuitPython_machine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  uv.lock.license
.github/workflows/: release_gh.yml
examples/: mp_machine_m5stack_byteswitch.py  mp_machine_simpletest.py
machine/: __init__.py  i2c.py
