# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 Bjoern Bilger
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "bikectl-circuitpython-mp-machine"
description = "MicroPython machine module shim for CircuitPython"
version = "0.0.0+auto.0"
readme = "README.md"
authors = [
    {name = "Bjoern Bilger"}
]
urls = {Homepage = "https://github.com/bikectl/CircuitPython_machine"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "mp_machine",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["machine"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
